--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "heroiko",
   "version": "0.1.0",
-  "homepage": "", 
+  "homepage": "https://marcos-cabral.github.io/HeroikoApp/", 
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
