--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "heroiko",
   "version": "0.1.0",
-  "homepage": "https://marcos-cabral.github.io/HeroikoApp/", 
+  "homepage": "https://marcos-cabral.github.io/HeroikoApp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -17,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
